# social-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  scheduler.py
config/: persona.yaml  settings.yaml
docs/plans/: 2026-02-10-social-assistant-design.md  2026-02-10-social-assistant-implementation.md
src/: config.py  pipeline.py
src/analyzer/: strategy.py
src/collector/: base.py  news.py  threads.py
src/db/: database.py
src/generator/: content.py  llm_provider.py
src/models/: schemas.py
src/publisher/: threads.py
src/reviewer/: handlers.py  slack_bot.py
tests/: conftest.py  test_analyzer.py  test_collector_news.py  test_collector_threads.py  test_database.py  test_generator.py  test_handlers.py  test_llm_provider.py  test_models.py  test_pipeline.py  test_publisher.py  test_reviewer.py
